--- a/IndexMapper/src/IndexMapper/IndexMapper.csproj
+++ b/IndexMapper/src/IndexMapper/IndexMapper.csproj
@@ -8,8 +8,6 @@
 
 	<PropertyGroup>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-		<TreatSpecificWarningsAsErrors />
-		<NoWarn>$(NoWarn);NU5104</NoWarn>
 		<LangVersion>11</LangVersion>
 		<Nullable>enable</Nullable>
 		<Version>0.0.1</Version>
@@ -18,6 +16,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="ProgrammerAl.SourceGenerators.PublicInterfaceGenerator" Version="1.0.0.62" PrivateAssets="all" />
 	  <PackageReference Include="PurpleSpikeProductions.CosmosDbIndexConfigurator.ConfigurationLib" Version="0.0.1-preview.7" />
 	</ItemGroup>
 
